[gd_scene load_steps=18 format=3 uid="uid://bx2vfu0oecevg"]

[ext_resource type="Texture2D" uid="uid://c3g4pmnnf07v5" path="res://art/UI/common/common_popup_frame_01.png" id="1_05lfr"]
[ext_resource type="Script" path="res://scripts/UI/buy_sodier_panel.gd" id="1_e73vb"]
[ext_resource type="Texture2D" uid="uid://bmkfekfju2j8k" path="res://art/UI/common/common_popoup_title_01.png" id="2_0rj41"]
[ext_resource type="Texture2D" uid="uid://dbrq7b87xl8yj" path="res://art/UI/common/common_title_icon_force.png" id="3_f4wnh"]
[ext_resource type="FontFile" uid="uid://d26g6ohny0dmm" path="res://art/UI/font/Montserrat-Black.otf" id="4_h01bn"]
[ext_resource type="Texture2D" uid="uid://u8qp0upluffc" path="res://art/UI/common/common_home_date_frame.png" id="5_mjyfd"]
[ext_resource type="Texture2D" uid="uid://0i3uaaxorl5p" path="res://art/UI/soldier/Soldier_warrior_A_n.png" id="7_i2g7v"]
[ext_resource type="Texture2D" uid="uid://cxi8ajh2p6nwu" path="res://art/UI/common/common_icon_coin_s.png" id="8_3t7iq"]
[ext_resource type="Texture2D" uid="uid://44ivxmrqwjx7" path="res://art/UI/soldier/Soldier_koight_A_n.png" id="9_mn666"]
[ext_resource type="Texture2D" uid="uid://3wam7etjt308" path="res://art/UI/common/common_enterbox_01.png" id="9_nqnou"]
[ext_resource type="Texture2D" uid="uid://w3vsn4hsx0c0" path="res://art/UI/common/common_button_blue_n-2.png" id="10_mgj8n"]
[ext_resource type="Script" path="res://scripts/NineBtn.gd" id="11_2mdsp"]
[ext_resource type="Texture2D" uid="uid://dnkd8tvc48vho" path="res://art/UI/common/common_button_close_n.png" id="12_6alde"]
[ext_resource type="Texture2D" uid="uid://b5vhh8om57t2u" path="res://art/UI/common/common_button_blue_c-2.png" id="13_x5ykv"]
[ext_resource type="Texture2D" uid="uid://cddp401q0gyqy" path="res://art/UI/common/common_button_blue_h-2.png" id="14_66h8g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j4dy3"]

[sub_resource type="Theme" id="Theme_cxie6"]
TextEdit/colors/background_color = Color(0, 0, 0, 0)
TextEdit/colors/caret_background_color = Color(0.860369, 0.860369, 0.860369, 1)
TextEdit/icons/space = null
TextEdit/styles/normal = SubResource("StyleBoxEmpty_j4dy3")

[node name="BuySodierPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e73vb")

[node name="Content" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -329.5
offset_right = 521.0
offset_bottom = 329.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_05lfr")
patch_margin_left = 92
patch_margin_top = 117
patch_margin_right = 96
patch_margin_bottom = 104

[node name="title" type="NinePatchRect" parent="Content"]
layout_mode = 0
offset_left = -19.0
offset_top = -29.0
offset_right = 475.0
offset_bottom = 86.0
texture = ExtResource("2_0rj41")
patch_margin_left = 175
patch_margin_right = 196

[node name="TextureRect" type="TextureRect" parent="Content/title"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -48.5
offset_right = 119.0
offset_bottom = 32.5
grow_vertical = 2
texture = ExtResource("3_f4wnh")

[node name="Label" type="Label" parent="Content/title"]
layout_mode = 0
offset_left = 128.0
offset_top = 33.0
offset_right = 449.0
offset_bottom = 75.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 34
text = "Buy Soldiers"

[node name="Item1" type="NinePatchRect" parent="Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -357.0
offset_top = -236.0
offset_right = -91.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_mjyfd")
region_rect = Rect2(0, 0.0747042, 47.7006, 47.9253)
patch_margin_left = 21
patch_margin_top = 18
patch_margin_right = 16
patch_margin_bottom = 19

[node name="Label" type="Label" parent="Content/Item1"]
layout_mode = 0
offset_left = 9.0
offset_right = 271.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 24
text = "Infantry"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Content/Item1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -132.0
offset_right = 90.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_i2g7v")

[node name="TextureRect2" type="TextureRect" parent="Content/Item1"]
layout_mode = 0
offset_left = 80.0
offset_top = 256.0
offset_right = 120.0
offset_bottom = 300.0
texture = ExtResource("8_3t7iq")

[node name="Label2" type="Label" parent="Content/Item1/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -11.5
offset_right = 76.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 24
text = "200"

[node name="NinePatchRect" type="NinePatchRect" parent="Content/Item1"]
layout_mode = 0
offset_left = 42.0
offset_top = 306.0
offset_right = 229.0
offset_bottom = 344.0
texture = ExtResource("9_nqnou")
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="Content/Item1/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cxie6")
placeholder_text = "Input Numbers"

[node name="Item2" type="NinePatchRect" parent="Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 115.0
offset_top = -236.0
offset_right = 381.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_mjyfd")
region_rect = Rect2(0, 0.0747042, 47.7006, 47.9253)
patch_margin_left = 21
patch_margin_top = 18
patch_margin_right = 16
patch_margin_bottom = 19

[node name="Label" type="Label" parent="Content/Item2"]
layout_mode = 0
offset_left = 9.0
offset_right = 271.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 24
text = "Cavalry"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Content/Item2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -132.0
offset_right = 90.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_mn666")

[node name="TextureRect2" type="TextureRect" parent="Content/Item2"]
layout_mode = 0
offset_left = 80.0
offset_top = 256.0
offset_right = 120.0
offset_bottom = 300.0
texture = ExtResource("8_3t7iq")

[node name="Label2" type="Label" parent="Content/Item2/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_top = -11.5
offset_right = 76.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 24
text = "200"

[node name="NinePatchRect" type="NinePatchRect" parent="Content/Item2"]
layout_mode = 0
offset_left = 42.0
offset_top = 306.0
offset_right = 229.0
offset_bottom = 344.0
texture = ExtResource("9_nqnou")
patch_margin_left = 9
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="Content/Item2/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cxie6")
placeholder_text = "Input Numbers"

[node name="Currency" type="TextureRect" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -180.0
offset_right = -68.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("8_3t7iq")

[node name="Label" type="Label" parent="Content/Currency"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -11.5
offset_right = 96.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 32
text = "999999999"

[node name="BtnBuy" type="TextureButton" parent="Content"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -121.0
offset_right = 127.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("11_2mdsp")
Normal = ExtResource("10_mgj8n")
Pressed = ExtResource("13_x5ykv")
Hover = ExtResource("14_66h8g")
image = NodePath("NinePatchRect")

[node name="NinePatchRect" type="NinePatchRect" parent="Content/BtnBuy"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_mgj8n")
patch_margin_left = 31
patch_margin_right = 30

[node name="Label" type="Label" parent="Content/BtnBuy"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.0584475, 0.259012, 0.191223, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_h01bn")
theme_override_font_sizes/font_size = 32
text = "Buy"

[node name="BtnClose" type="TextureButton" parent="Content"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = -12.0
offset_right = 10.0
offset_bottom = 53.0
grow_horizontal = 0
texture_normal = ExtResource("12_6alde")
